--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,82 +1,75 @@
 {
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-e941a3f6.css",
+    "src": "src/routes/+layout.css"
+  },
   "src/routes/+page.css": {
     "file": "_app/immutable/assets/_page-b4578c7f.css",
     "src": "src/routes/+page.css"
   },
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-217f1f00.css",
-    "src": "src/routes/+layout.css"
+  "__layout-e4a84b88.js": {
+    "file": "_app/immutable/chunks/_layout-e4a84b88.js"
+  },
+  "_stores-3c757b64.js": {
+    "file": "_app/immutable/chunks/stores-3c757b64.js",
+    "imports": [
+      "_index-d3784472.js",
+      "_singletons-02c98e81.js"
+    ]
+  },
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-a0c10e9e.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-d3784472.js",
+      "_stores-3c757b64.js"
+    ]
+  },
+  "_singletons-02c98e81.js": {
+    "file": "_app/immutable/chunks/singletons-02c98e81.js",
+    "imports": [
+      "_index-d3784472.js"
+    ]
+  },
+  "_preload-helper-41c905a7.js": {
+    "file": "_app/immutable/chunks/preload-helper-41c905a7.js"
+  },
+  ".svelte-kit/generated/client-optimized/nodes/0.js": {
+    "file": "_app/immutable/chunks/0-70395b30.js",
+    "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__layout-e4a84b88.js",
+      "src/routes/+layout.svelte"
+    ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-9f17d2f0.js",
+    "file": "_app/immutable/chunks/2-1423f74b.js",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isDynamicEntry": true,
     "imports": [
       "src/routes/+page.svelte"
     ]
   },
-  ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-f89b9e04.js",
-    "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__layout-da46b06b.js",
-      "src/routes/+layout.svelte"
-    ]
-  },
-  "_singletons-0c62c677.js": {
-    "file": "_app/immutable/chunks/singletons-0c62c677.js",
-    "imports": [
-      "_index-7aeb220b.js"
-    ]
-  },
-  "_preload-helper-41c905a7.js": {
-    "file": "_app/immutable/chunks/preload-helper-41c905a7.js"
-  },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-11d17060.js",
+    "file": "_app/immutable/chunks/1-3e7de25b.js",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
     ]
   },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-1eaca0ea.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-d3784472.js",
-      "_singletons-0c62c677.js"
-    ]
-  },
-  "_index-7aeb220b.js": {
-    "file": "_app/immutable/chunks/index-7aeb220b.js",
-    "imports": [
-      "_index-d3784472.js"
-    ]
-  },
-  "__layout-da46b06b.js": {
-    "file": "_app/immutable/chunks/_layout-da46b06b.js"
-  },
   "_index-d3784472.js": {
     "file": "_app/immutable/chunks/index-d3784472.js"
   },
-  "src/routes/+layout.ts": {
-    "file": "_app/immutable/modules/pages/_layout.ts-9cbb603b.js",
-    "src": "src/routes/+layout.ts",
-    "isEntry": true,
-    "imports": [
-      "__layout-da46b06b.js"
-    ]
-  },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-a1f3e58f.js",
+    "file": "_app/immutable/start-7d2d3f3a.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
       "_index-d3784472.js",
-      "_singletons-0c62c677.js",
+      "_singletons-02c98e81.js",
       "_preload-helper-41c905a7.js"
     ],
     "dynamicImports": [
@@ -85,15 +78,23 @@
       ".svelte-kit/generated/client-optimized/nodes/2.js"
     ]
   },
+  "src/routes/+layout.ts": {
+    "file": "_app/immutable/modules/pages/_layout.ts-e4e26074.js",
+    "src": "src/routes/+layout.ts",
+    "isEntry": true,
+    "imports": [
+      "__layout-e4a84b88.js"
+    ]
+  },
   "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-b8bd015b.js",
+    "file": "_app/immutable/components/pages/_layout.svelte-a391be0a.js",
     "src": "src/routes/+layout.svelte",
     "isEntry": true,
     "imports": [
       "_index-d3784472.js"
     ],
     "css": [
-      "_app/immutable/assets/_layout-217f1f00.css"
+      "_app/immutable/assets/_layout-e941a3f6.css"
     ]
   },
   "node_modules/katex/dist/katex.mjs": {
@@ -102,13 +103,14 @@
     "isDynamicEntry": true
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-6d5be0f8.js",
+    "file": "_app/immutable/components/pages/_page.svelte-a8b9556c.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-d3784472.js",
-      "_index-7aeb220b.js",
-      "_preload-helper-41c905a7.js"
+      "_singletons-02c98e81.js",
+      "_preload-helper-41c905a7.js",
+      "_stores-3c757b64.js"
     ],
     "dynamicImports": [
       "node_modules/katex/dist/katex.mjs"
