--- a/package.json
+++ b/package.json
@@ -1,44 +1,26 @@
 {
-  "name": "h3",
-  "version": "0.0.1",
+  "name": "h3-svelte5",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite dev",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write .",
-    "deploy": "npm run build && gh-pages -d build -t true"
+    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.0",
-    "@sveltejs/adapter-static": "^1.0.6",
-    "@sveltejs/kit": "^1.0.0",
-    "@types/katex": "^0.16.0",
-    "@types/three": "^0.148.1",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "gh-pages": "^5.0.0",
-    "katex": "^0.16.4",
-    "prettier": "^2.8.0",
-    "prettier-plugin-svelte": "^2.8.1",
-    "sass": "^1.57.1",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
-    "svelte-preprocess": "^5.0.1",
-    "svelte-styling": "^0.1.0",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
+    "@tsconfig/svelte": "^5.0.5",
+    "@types/node": "^24.10.0",
+    "@types/three": "^0.181.0",
+    "svelte": "^5.43.5",
+    "svelte-check": "^4.3.3",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.2"
   },
-  "type": "module",
   "dependencies": {
-    "three": "^0.149.0",
-    "three-extended-material": "^0.1.3"
+    "runed": "^0.36.0",
+    "three": "^0.181.1"
   }
 }
