--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
     "allowJs": true,
     "checkJs": true,
     "moduleDetection": "force",
+    "emitDeclarationOnly": true,
     "composite": true
   },
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
