--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -12,6 +12,7 @@
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "moduleDetection": "force",
+    "emitDeclarationOnly": true,
     "composite": true,
 
     /* Linting */
